# pipeawesome

./: Cargo.toml  Makefile  README.md  README.md.build.js  README.src.md  add_debug_to_pipeawesome_spec  command_start.paspec.json  dead_end.paspec.json  pad_to_8.paspec.json  pipeawesome-terminator-tests.bats
examples/: perfect_soup.paspec.json  soup_back_to_kitchen.paspec.json  soup_back_to_kitchen.paspec.json5  temperature_prope.paspec.json  temperature_prope.paspec.json5
src/: accounting.rs  accounting_writer.rs  common_types.rs  config.rs  controls.rs  failed.rs  lib.rs  main.rs  pipeawesome-terminator.rs  pipeawesome.rs  stdin_out.rs
tests/: pipeawesome-terminator.bats  pipeawesome.bats
tests/pipeawesome/: pad_to_5.expected.txt  pad_to_5.input.txt  pad_to_5.json  soup_temperature.expected.txt  soup_temperature.input.txt  soup_temperature.paspec.json
tests/pipeawesome-terminator/: expected.txt  seen_all_closed_via_end  seen_all_closed_via_grace_period
