[package]
name = "pipeawesome"
version = "0.1.0"
authors = ["Matthew Forrester <matthew.forrester@speechmarks.com>"]
edition = "2018"
default-run = "pipeawesome"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
clap = "2.32"
csv = "1"
regex = "1.3.9"

[[bin]]
name = "pipeawesome-terminator"
path = "src/pipeawesome-terminator.rs"

[[bin]]
name = "pipeawesome"
path = "src/pipeawesome.rs"
